--- a/index.html
+++ b/index.html
@@ -116,19 +116,18 @@ Remember This?
 <div id="carouselContainer" class="carousel-container hidden">
 <div class="carousel-track" id="photoCarouselTrack">
 <!-- Replace these URLs with your own photos -->
-<img src="https://imgur.com/a/8dSp66f" alt="A meaningful photo of us.">
-<img src="https://imgur.com/Gnr6Lzq" alt="A meaningful photo of us.">
-<img src="https://imgur.com/a/p5LHosS" alt="A meaningful photo of us.">
-<img src="https://imgur.com/a/PNBGaJy" alt="A meaningful photo of us.">
-<img src="https://imgur.com/a/8GdkykW" alt="A meaningful photo of us.">
+<img src="https://i.imgur.com/vBmSH1x.jpeg" alt="A meaningful photo of us.">
+<img src="https://i.imgur.com/Ei3y5X5.jpeg" alt="A meaningful photo of us.">
+<img src="i.imgur.com/04lJHc2.jpeg" alt="A meaningful photo of us.">
+<img src="https://i.imgur.com/vQIPP6k.jpeg" alt="A meaningful photo of us.">
+<img src="https://i.imgur.com/NuiZA1V.jpeg" alt="A meaningful photo of us.">
 </div>
 <button class="carousel-btn carousel-btn-prev" onclick="manualPrevSlide()">&#10094;</button>
 <button class="carousel-btn carousel-btn-next" onclick="manualNextSlide()">&#10095;</button>
 </div>
 </div>
 
-<p class="text-base mb-4 fade-in">I ask a beautiful question? : "Can a mended connection be authentic, committed, whole, and true?" My heart's answer is a resounding yes. I believe that a connection, when it is lovingly and intentionally repaired, can become stronger than it was before. The journey of mending requires a deeper kind of vulnerability and trust, and it is in this process that we can truly see each other, forgive, and commit to a love that is whole precisely because it has been tested and healed.
-Only I cannot answer for you. What do you feel? 
+<p class="text-base mb-4 fade-in">I ask a beautiful question? : "Can a mended connection be authentic, committed, whole, and true?" My heart's answer is a resounding yes. I believe that a connection, when it is lovingly and intentionally repaired, can become stronger than it was before. The journey of mending requires a deeper kind of vulnerability and trust, and it is in this process that we can truly see each other, forgive, and commit to a love that is whole precisely because it has been tested and healed. Only I cannot answer for you. What do you feel? 
 </p>
 
 <p class="text-center font-bold text-lg text-rose-500 fade-in">September 10, 2014</p>
