--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@ Even with the passage of time, this day will always be a special symbol of our u
 <div class="flex flex-col items-center mb-6">
 <!-- Audio Playlist -->
 <!-- Replace these URLs with your chosen songs -->
-<audio id="audio-1" src="https://share.google/o9CJZo9oKoE5F4AHy" preload="auto"></audio>
-<audio id="audio-2" src="https://share.google/xBcZyVd2Xm23S9UNx" preload="auto"></audio>
-<audio id="audio-3" src="https://share.google/qUYwIAIotkV8iFgdA" preload="auto"></audio>
-<audio id="audio-4" src="https://share.google/hGWxKWOJzHgjlu4QB" preload="auto"></audio>
+<audio id="audio-1" src="C:\Users\allis\Downloads\Try Our Love Again [Jc3bHyq2bQI].mp3" preload="auto"></audio>
+<audio id="audio-2" src="C:\Users\allis\Downloads\Try Our Love Again [Jc3bHyq2bQI].mp3" preload="auto"></audio>
+<audio id="audio-3" src="C:\Users\allis\Downloads\Skip Marley, H.E.R. - Slow Down.mp3" preload="auto"></audio>
+<audio id="audio-4" src="C:\Users\allis\Downloads\Musiq Soulchild - Love.mp3" preload="auto"></audio>
 
 <!-- Start Button -->
 <button id="startButton" class="bg-gradient-to-r from-rose-500 to-rose-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transition-transform duration-200 transform hover:scale-105">
@@ -117,7 +117,6 @@ Remember This?
 <div class="carousel-track" id="photoCarouselTrack">
 <!-- Replace these URLs with your own photos -->
 <img src="https://i.imgur.com/vBmSH1x.jpeg" alt="A meaningful photo of us.">
-<img src="https://i.imgur.com/Ei3y5X5.jpeg" alt="A meaningful photo of us.">
 <img src="i.imgur.com/04lJHc2.jpeg" alt="A meaningful photo of us.">
 <img src="https://i.imgur.com/vQIPP6k.jpeg" alt="A meaningful photo of us.">
 <img src="https://i.imgur.com/NuiZA1V.jpeg" alt="A meaningful photo of us.">
