--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Even with the passage of time, this day will always be a special symbol of our u
 <!-- Replace these URLs with your chosen songs -->
 <audio id="audio-1" src="https://mrsturner.github.io/Sept10th/assets/Try Our Love Again [Jc3bHyq2bQI].mp3" preload="auto"></audio>
 <audio id="audio-2" src="C:\Users\allis\Downloads\Try Our Love Again [Jc3bHyq2bQI].mp3" preload="auto"></audio>
-<audio id="audio-3" src="C:\Users\allis\Downloads\Skip Marley, H.E.R. - Slow Down.mp3" preload="auto"></audio>
+<audio id="audio-3" src="https://mrsturner.github.io/Sept10th/assets/Slow Down.mp3" preload="auto"></audio>
 <audio id="audio-4" src="C:\Users\allis\Downloads\Musiq Soulchild - Love.mp3" preload="auto"></audio>
 
 <!-- Start Button -->
