--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ Even with the passage of time, this day will always be a special symbol of our u
 <div class="flex flex-col items-center mb-6">
 <!-- Audio Playlist -->
 <!-- Replace these URLs with your chosen songs -->
-<audio id="audio-1" src="https://mrsturner.github.io/Sept10th/assets/Try Our Love Again [Jc3bHyq2bQI].mp3" preload="auto"></audio>
-<audio id="audio-2" src="https://mrsturner.github.io/Sept10th/assets/Love Again (432Hz).mp3" preload="auto"></audio>
-<audio id="audio-3" src="https://mrsturner.github.io/Sept10th/assets/Slow Down.mp3" preload="auto"></audio>
+<audio id="audio-1" src="https://mrsturner.github.io/Sept10th/assets/Try%20Our%20Love%20Again%20%5BJc3bHyq2bQI%5D.mp3" preload="auto"></audio>
+<audio id="audio-2" src="https://mrsturner.github.io/Sept10th/assets/Love%20Again%20%28432Hz%29.mp3" preload="auto"></audio>
+<audio id="audio-3" src="https://mrsturner.github.io/Sept10th/assets/Slow%20Down.mp3" preload="auto"></audio>
 <audio id="audio-4" src="https://mrsturner.github.io/Sept10th/assets/Love.mp3" preload="auto"></audio>
 
 <!-- Start Button -->
@@ -117,7 +117,7 @@ Remember This?
 <div class="carousel-track" id="photoCarouselTrack">
 <!-- Replace these URLs with your own photos -->
 <img src="https://i.imgur.com/vBmSH1x.jpeg" alt="A meaningful photo of us.">
-<img src="i.imgur.com/04lJHc2.jpeg" alt="A meaningful photo of us.">
+<img src="https://i.imgur.com/04lJHc2.jpeg" alt="A meaningful photo of us.">
 <img src="https://i.imgur.com/vQIPP6k.jpeg" alt="A meaningful photo of us.">
 <img src="https://i.imgur.com/NuiZA1V.jpeg" alt="A meaningful photo of us.">
 </div>
