--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@ Even with the passage of time, this day will always be a special symbol of our u
 <div class="flex flex-col items-center mb-6">
 <!-- Audio Playlist -->
 <!-- Replace these URLs with your chosen songs -->
-<audio id="audio-1" src="https://mrsturner.github.io/Sept10th/assets/Try%20Our%20Love%20Again%20%5BJc3bHyq2bQI%5D.mp3" preload="auto"></audio>
-<audio id="audio-2" src="https://mrsturner.github.io/Sept10th/assets/Love%20Again%20%28432Hz%29.mp3" preload="auto"></audio>
-<audio id="audio-3" src="https://mrsturner.github.io/Sept10th/assets/Slow%20Down.mp3" preload="auto"></audio>
-<audio id="audio-4" src="https://mrsturner.github.io/Sept10th/assets/Love.mp3" preload="auto"></audio>
+<audio id="audio-1" src="https://mrsturner.github.io/Sept10th/assets/Try%20Our%20Love%20Again%20%5BJc3bHyq2bQI%5D.mp3" preload="auto" controls></audio>
+<audio id="audio-2" src="https://mrsturner.github.io/Sept10th/assets/Love%20Again%20%28432Hz%29.mp3" preload="auto" controls></audio>
+<audio id="audio-3" src="https://mrsturner.github.io/Sept10th/assets/Slow%20Down.mp3" preload="auto" controls></audio>
+<audio id="audio-4" src="https://mrsturner.github.io/Sept10th/assets/Love.mp3" preload="auto" controls></audio>
 
 <!-- Start Button -->
 <button id="startButton" class="bg-gradient-to-r from-rose-500 to-rose-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transition-transform duration-200 transform hover:scale-105">
