--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Even with the passage of time, this day will always be a special symbol of our u
 <audio id="audio-1" src="https://mrsturner.github.io/Sept10th/assets/try-our-love-again.mp3" preload="auto" controls></audio>
 <audio id="audio-2" src="https://mrsturner.github.io/Sept10th/assets/Love%20Again%20%28432Hz%29.mp3" preload="auto" controls></audio>
 <audio id="audio-3" src="https://mrsturner.github.io/Sept10th/assets/Slow%20Down.mp3" preload="auto" controls></audio>
-<audio id="audio-4" src="https://mrsturner.github.io/Sept10th/assets/Love.mp3" preload="auto" controls></audio>
+<audio id="audio-4" src="https://youtu.be/yQ_zqoiHMdM" preload="auto" controls></audio>
 
 <!-- Start Button -->
 <button id="startButton" class="bg-gradient-to-r from-rose-500 to-rose-700 text-white font-bold py-3 px-8 rounded-full shadow-lg transition-transform duration-200 transform hover:scale-105">
